# real-time-sentiment-analysis-platform

./: .dockerignore  .env.example  ARCHITECTURE.md  README.md  docker-compose.yml  submission.yml
backend/: Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
backend/api/: routes.py  websocket.py
backend/models/: database.py
backend/services/: sentiment_analyzer.py
backend/tests/: test_api.py
backend/tests/unit/: test_aggregator.py  test_alerting.py  test_sentiment_analyzer.py
frontend/: Dockerfile  package-lock.json
ingester/: .dockerignore  Dockerfile  README.md  ingester.py  pyproject.toml  requirements.txt
ingester/tests/: test_ingester.py
worker/: Dockerfile  README.md  pyproject.toml  requirements.txt
worker/tests/: test_worker.py
