[project]
name = "sentiment_analysis_backend"
version = "0.1.0"
description = "A backend service for sentiment analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.24.0",
    "python-dotenv==1.0.0",
    "sqlalchemy>=2.0.45",
    "tenacity>=9.1.2",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

