[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
    # Backend service dependencies (for sentiment_analyzer)
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.1.2",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "asyncpg>=0.31.0",
    "hf-xet>=1.2.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
